# aci-moquery-browser

./: README.md  start.ps1  start.sh
backend/: pyproject.toml
backend/app/: database.py  ingest.py  main.py  models.py  parser.py  tenant_parser.py
backend/data/: db.sqlite-shm  db.sqlite-wal
backend/data/uploads/: d2556fdc4aeceff7372ea0a4e1ec2915a93dd1a4d55750de6e2a820e36088ad4_test_moquery.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ConfigPanel.tsx  DataBrowser.tsx  FileBrowser.tsx  FileUpload.tsx  MainLayout.tsx  TenantInformation.tsx
frontend/src/lib/: api.ts  utils.ts
